<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telegram_ros2</name>
  <version>0.0.0</version>
  <description>Send and receive messages with the Telegram chat application</description>
  <maintainer email="loy.vanbeek@gmail.com">loy</maintainer>
  <license>MIT</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>instant_messaging_interfaces</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-telegram-bot</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
